<resources>
    <string name="app_name">爱午餐</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="networkoff">无可用网络</string>
    <string name="networktimeout">网络连接超时</string>
    <string name="click_again_exit">再按一次退出程序</string>
    <string name="back_string">返回</string>
    <string name="toast_login_now">正在登录</string>
    <string name="cancel_string">取消</string>
    <string name="confirm_string">确定</string>
    <string name="loading">加载中...</string>
    <string name="get_verify">获取验证码</string>
    <string name="my_accont_title">我的账户</string>
    <string name="accont_remain_string">账户余额</string>
    <string name="waitfor_pay_string">待付款</string>
    <string name="already_pay_string">已付款</string>
    <string name="already_receive_string">已收货</string>
    <string name="loginout_string">退出登录</string>
    <string name="radiobtn_homepage_string">首页</string>
    <string name="radiobtn_setting_string">发现</string>
    <string name="radiobtn_myaccount_string">我的</string>
    <string name="radiobtn_help_string">帮助</string>
    <string name="radiobtn_cart_string">购物车</string>
    <string name="qihuaqi_string">今日特卖</string>
    <string name="recommend_string">专题</string>
    <string name="yuanzhiji_string">佣金</string>
    <string name="commission_list_string">佣金排行</string>
    <string name="get_yongjin_list_failed">获取佣金信息失败</string>
    <string name="get_recommend_list_failed">获取推荐产品信息失败</string>
    <string name="yongjin_price">￥%1$s</string>
    <string name="format_string">&#165;%1$2.2f</string>
    <string name="logined_user">欢迎您，%1$s</string>
    <string name="buy_string">确定购买</string>
    <string name="total_cost_string">合计：</string>
    <string name="postage_string">邮费：</string>
    <string name="vipcost_string">会员价：</string>
    <string name="youhuicost_string">优惠：</string>
    <string name="pay_total_string">付款金额：</string>
    <string name="pay_recv_address">收货地址：</string>
    <string name="change_string">修改</string>
    <string name="done">完成</string>
    <string name="payment_string">支付方式：</string>
    <string name="pay_selet_address">请设置默认收货地址！</string>
    <string name="payment_title_string">支付</string>
    <string name="pay_success_title">付款成功</string>
    <string name="pay_success_string1">我们将在24小时内给您发货</string>
    <string name="pay_success_string2">请耐心等待</string>
    <string name="order_id_string">订单号：</string>
    <string name="order_cost_string">付款总额：</string>
    <string name="order_detail_string">收件信息：</string>
    <string name="order_button_string">查看订单</string>
    <string name="payment_success_title">付款成功</string>
    <string name="payment_failed_title">付款失败</string>
    <string name="payment_failed_string">您的付款似乎没有成功</string>
    <string name="payment_failed_reason">失败的可能原因</string>
    <string name="failed_reason1">1、网络故障，请检查您的网络是否畅通</string>
    <string name="failed_reason2">2、余额不足，请查看您的账户余额</string>
    <string name="failed_reason3">3、支付密码错误</string>
    <string name="repay_button_string">返回重新付款</string>
    <string name="cart_product_num">数量：%1$s</string>
    <string name="cart_product_price">￥%1$s</string>
    <string name="cart_add_success">恭喜，添加到购物车成功！</string>
    <string name="cart_is_null">购物车是空的~~</string>
    <string name="phone_quick_buy">快捷购买</string>
    <string name="cart_total_fee">￥%1$s（包邮）</string>
    <string name="myshare_title">我的分享</string>
    <string name="share_to_string">分享到</string>
    <string name="mypoint_title">我的积分</string>
    <string name="mycash_title">提现记录</string>
    <string name="total_point_string">积分总数</string>
    <string name="delete_string">删除</string>
    <string name="myfavorite_title">我的收藏</string>
    <string name="myorder_title">我的订单</string>
    <string name="mybankcard_title">我的银行卡</string>
    <string name="document_type_string">身份证：</string>
    <string name="id_card_string">身份证</string>
    <string name="passport_string">护照</string>
    <string name="document_name_string">证件姓名：</string>
    <string name="document_name_hint">请输入证件上的姓名</string>
    <string name="document_num_string">证件号码：</string>
    <string name="document_num_hint">请输入证件号码</string>
    <string name="open_bank_string">开户行：</string>
    <string name="open_bank_hint">请输入开户行</string>
    <string name="bank_account_string">银行账号：</string>
    <string name="bank_account_hint">请输入银行账号</string>
    <string name="mybankcard_btn_string">确认保存</string>
    <string name="dalu_card">大陆身份证</string>
    <string name="got_card">港澳台身份证</string>
    <string name="back_content_null">请完整的填写银行卡信息</string>
    <string name="add_success">添加成功</string>
    <string name="add_failed">添加失败</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="bank_num">尾号%1$s</string>
    <string name="get_bank_card_failed">获取银行卡信息失败</string>
    <string name="mobile_buy_title">手机快捷购买</string>
    <string name="quick_buy_string">立即购买</string>
    <string name="quick_buy_warn">*使用快捷购买可以免注册/登录，直接使用您的手机号下单购买，快捷购买用户无法享受会员优惠！ </string>
    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="account_name_string">账号：</string>
    <string name="account_pw_string">密码：</string>
    <string name="account_name_hint">请输入用户名</string>
    <string name="phone_name_hint">请输入手机号</string>
    <string name="account_pw_hint">请输入密码</string>
    <string name="account_ensure_pw_hint">请确定密码</string>
    <string name="phone_pw_hint">请输入动态密码</string>
    <string name="login_btn_string">登录</string>
    <string name="quick_login_btn_string">快捷登录</string>
    <string name="register_btn_string"><u>立即注册</u></string>
    <string name="forget_pwd_btn_string"><u>忘记密码</u></string>
    <string name="qqlogin_btn_string">用QQ账号登录</string>
    <string name="weibologin_btn_string">用微博账号登录</string>
    <string name="account_null_string">账号不能为空</string>
    <string name="account_error_string">请输入正确的手机号或邮箱地址</string>
    <string name="login_success_string">登录成功</string>
    <string name="login_failed_string">登录失败</string>
    <string name="login_out_string">确定退出当前账号?</string>
    <string name="request_failed_string">请求失败</string>
    <string name="complete_info_string">完善资料</string>
    <string name="complete_info_warn">您需要完善资料，以便绑定账号</string>
    <string name="register_type_string">注册方式：</string>
    <string name="register_phone_string">手机</string>
    <string name="register_email_string">邮箱</string>
    <string name="phonenum_string">手机号：</string>
    <string name="phonenum_hint_string">请输入手机号</string>
    <string name="email_string">邮箱地址：</string>
    <string name="email_hint_string">请输入邮箱地址</string>
    <string name="username_hint_string">请输入用户名</string>
    <string name="username_string">用户名：</string>
    <string name="password_string">密码：</string>
    <string name="password_hint_string">请输入密码(6&#8211;20个字符)</string>
    <string name="password_again_string">确认密码：</string>
    <string name="password_again_hint_string">请再次输入密码</string>
    <string name="code_string">验证码：</string>
    <string name="code_hint_string">请输入验证码</string>
    <string name="nickname_string">昵称：</string>
    <string name="nickname_hint_string">请输入昵称</string>
    <string name="get_code_string">获取验证码</string>
    <string name="get_code_success">获取验证码成功</string>
    <string name="get_code_failed">获取验证码失败</string>
    <string name="phonenum_null_string">手机号不能为空</string>
    <string name="phonenum_error_string">请输入正确的手机号码</string>
    <string name="email_null_string">邮箱地址不能为空</string>
    <string name="email_error_string">请输入正确的邮箱地址</string>
    <string name="sms_null_string">验证码不能为空</string>
    <string name="nickname_null_string">昵称不能为空</string>
    <string name="password_null_string">密码不能为空</string>
    <string name="password_error_string">密码不足6个字符</string>
    <string name="confirmPw_null_string">确认密码不能为空</string>
    <string name="confirmPw_error_string">两次输入的密码不一致</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="commit_string">提交</string>
    <string name="add_address_title">添加新地址</string>
    <string name="edit_address_title">编辑地址</string>
    <string name="address_name_string">姓名：</string>
    <string name="address_name_hint">请填写收款人姓名</string>
    <string name="address_province_string">省份：</string>
    <string name="address_city_string">城市：</string>
    <string name="address_circle_string">区县：</string>
    <string name="address_detail_string">街道地址：</string>
    <string name="address_mobile_string">手机：</string>
    <string name="address_phone_string">座机：</string>
    <string name="address_zipcode_string">邮编：</string>
    <string name="address_default_string">设为默认：</string>
    <string name="address_detail_hine">请填写地址</string>
    <string name="address_mobile_hint">请填写手机号码</string>
    <string name="address_phone_hint">请填写座机号码</string>
    <string name="address_zipcode_hint">请填写邮政编码</string>
    <string name="address_confirm_string">完成</string>
    <string name="address_name_null">姓名不能为空</string>
    <string name="address_null_string">街道地址不能为空</string>
    <string name="address_telephone_string">手机号不能为空</string>
    <string name="address_zipcode_null">邮编不能为空</string>
    <string name="address_title">收货地址</string>
    <string name="address_add_string">添加</string>
    <string name="personal_data_title">个人资料</string>
    <string name="update_pic">修改头像</string>
    <string name="user_name">昵称：</string>
    <string name="sex">性别：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="birthday">生日：</string>
    <string name="qq">QQ：</string>
    <string name="provinces">省份：</string>
    <string name="city">城市：</string>
    <string name="get_user_pic_success">获取用户头像成功</string>
    <string name="get_user_pic_failed">获取用户头像失败</string>
    <string name="update_profile_success">修改成功</string>
    <string name="update_profile_failed">修改失败</string>
    <string name="choice_photo">从相册选择</string>
    <string name="take_photo">拍&#160;&#160;&#160;&#160;&#160;&#160;&#160;照</string>
    <string name="photo_cancel">取&#160;&#160;&#160;&#160;&#160;&#160;&#160;消</string>
    <string name="update_info_finish">完成</string>
    <string name="submiting">提交中...</string>
    <string name="pic_updating">上传中...</string>
    <string name="update_useravatar_success">上传成功</string>
    <string name="update_useravatar_failed">上传失败</string>
    <string name="spinner_province_string">省份</string>
    <string name="spinner_city_string">城市</string>
    <string name="spinner_direct_string">区县</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_desc">产品描述：</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="share">分享</string>
    <string name="my_commission">我的佣金</string>
    <string name="commission">佣金</string>
    <string name="commission_card">佣金劵</string>
    <string name="un_user">不可用</string>
    <string name="no_user">未使用</string>
    <string name="exchange">兑换</string>
    <string name="my_coupon">我的优惠劵</string>
    <string name="get_coupon_failed">获取优惠券信息失败</string>
    <string name="used_or_unused">可用%1$s张，已用%2$s张</string>
    <string name="account_recharge">账户充值</string>
    <string name="recharge_money">充值金额(元)：</string>
    <string name="recharge_money_hint_string">请输入充值金额</string>
    <string name="input_recharge_money">请填入充值金额！</string>
    <string name="create_recharge_failed">订单生成失败！</string>
    <string name="recharge_money_content">手机充值%1$s元</string>
    <string name="get_recharge_detail_failed">订单详情获取失败！</string>
    <string name="apply_cash">申请提现</string>
    <string name="account_amount">帐号金额：</string>
    <string name="withdraw_cash_amount">提现金额：</string>
    <string name="input_withdraw_cash_amount">请输入提现金额</string>
    <string name="credentials_num">证件号码：</string>
    <string name="sure_withdraw">确认提现</string>
    <string name="apply_cash_success">申请提现成功</string>
</resources>