<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_title_height" >

        <LinearLayout
            android:id="@+id/backLl"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp" >

            <ImageView
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@drawable/jt_left" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/login_hysy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="18dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_user" />

        <EditText
            android:id="@+id/accountNameEdit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/account_name_hint"
            android:paddingRight="12dp"
            android:textColor="#666666"
            android:textColorHint="#cccccc"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="#e2e2e2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="18dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_password" />

        <EditText
            android:id="@+id/accountPwEdit"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/account_pw_hint"
            android:inputType="textPassword"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#cccccc"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="#e2e2e2" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_selector"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/login_btn_string"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/quickLoginRl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/quick_login_selector"
        android:clickable="true" >

        <TextView
            android:id="@+id/quickLoginTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/quick_login_btn_string"
            android:textColor="#aaaaaa"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="7dp"
            android:layout_toLeftOf="@id/quickLoginTv"
            android:src="@drawable/message_login_ic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/registerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/register_btn_string"
            android:textColor="#ff830c"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forgetTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:text="@string/forget_pwd_btn_string"
            android:textColor="#ff830c"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center_horizontal"
        android:text="还可以用以下网站登录"
        android:textColor="#aaaaaa"
        android:textSize="13sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <View
            android:id="@+id/tempView"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/wechatIv"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="13dp"
            android:layout_toLeftOf="@id/tempView"
            android:clickable="true"
            android:src="@drawable/logo_wechat" />

        <ImageView
            android:id="@+id/qqIv"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="13dp"
            android:layout_toRightOf="@id/tempView"
            android:clickable="true"
            android:src="@drawable/logo_qq" />
    </RelativeLayout>

</LinearLayout>